--- a/pixi.toml
+++ b/pixi.toml
@@ -16,3 +16,8 @@ gnuradio-qtgui = ">=3.10.11.0,<4"
 gnuradio-grc = ">=3.10.11.0,<4"
 gnuradio-iio = ">=3.10.11.0,<4"
 gnuradio-pmt = ">=3.10.11.0,<4"
+ipython = ">=8.30.0,<9"
+jupyterlab = ">=4.3.1,<5"
+plotly = ">=5.24.1,<6"
+git-lfs = ">=3.6.0,<4"
+git = ">=2.47.1,<3"
