--- a/pixi.toml
+++ b/pixi.toml
@@ -21,3 +21,6 @@ jupyterlab = ">=4.3.1,<5"
 plotly = ">=5.24.1,<6"
 git-lfs = ">=3.6.0,<4"
 git = ">=2.47.1,<3"
+ipykernel = ">=6.29.5,<7"
+python-lsp-server = ">=1.12.0,<2"
+nodejs = ">=22.11.0,<22.12"
