--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ authors = ["Petrus Hyvönen <petrus.hyvonen@gmail.com>"]
 channels = ["conda-forge"]
 description = "A pixi configuration for running GNU Radio easily"
 name = "pixi-gnuradio"
-platforms = ["linux-64", "win-64"]
+platforms = ["linux-64", "win-64", "osx-arm64"]
 version = "0.1.0"
 
 [tasks]
@@ -16,11 +16,11 @@ gnuradio-qtgui = ">=3.10.12.0,<4"
 gnuradio-grc = ">=3.10.12.0,<4"
 gnuradio-iio = ">=3.10.12.0,<4"
 gnuradio-pmt = ">=3.10.12.0,<4"
-ipython = ">=9.2.0,<10"
-jupyterlab = ">=4.4.2,<5"
-plotly = ">=6.0.1,<7"
+ipython = ">=9.4.0,<10"
+jupyterlab = ">=4.4.4,<5"
+plotly = ">=6.2.0,<7"
 git-lfs = ">=3.6.1,<4"
 git = ">=2.49.0,<3"
 ipykernel = ">=6.29.5,<7"
-python-lsp-server = ">=1.12.2,<2"
-nodejs = ">=22.13.0,<22.14"
+python-lsp-server = ">=1.13.0,<2"
+nodejs = ">=24.4.0,<24.5"
