--- a/pixi.toml
+++ b/pixi.toml
@@ -7,20 +7,21 @@ platforms = ["linux-64", "win-64", "osx-arm64"]
 version = "0.1.0"
 
 [tasks]
+gui = "gnuradio-companion"
 
 [dependencies]
 gnuradio = ">=3.10.12.0,<4"
-gnuradio-satellites = ">=5.7.0,<6"
+gnuradio-satellites = ">=5.8.0,<6"
 gnuradio-zeromq = ">=3.10.12.0,<4"
 gnuradio-qtgui = ">=3.10.12.0,<4"
 gnuradio-grc = ">=3.10.12.0,<4"
 gnuradio-iio = ">=3.10.12.0,<4"
 gnuradio-pmt = ">=3.10.12.0,<4"
-ipython = ">=9.4.0,<10"
-jupyterlab = ">=4.4.4,<5"
-plotly = ">=6.2.0,<7"
-git-lfs = ">=3.6.1,<4"
-git = ">=2.49.0,<3"
-ipykernel = ">=6.29.5,<7"
-python-lsp-server = ">=1.13.0,<2"
-nodejs = ">=24.4.0,<24.5"
+ipython = ">=9.7.0,<10"
+jupyterlab = ">=4.5.0,<5"
+plotly = ">=6.5.0,<7"
+git-lfs = ">=3.7.1,<4"
+git = ">=2.52.0,<3"
+ipykernel = ">=7.1.0,<8"
+python-lsp-server = ">=1.13.2,<2"
+nodejs = ">=24.4.1,<24.10"
